RESOLVED FIXED237891
RemoteGraphicsContextGLProxy omits context lost checks for back and front buffer access functions
https://bugs.webkit.org/show_bug.cgi?id=237891
Summary RemoteGraphicsContextGLProxy omits context lost checks for back and front buf...
Kimmo Kinnunen
Reported 2022-03-15 07:02:30 PDT
RemoteGraphicsContextGLProxy omits context lost checks for back and front buffer access functions
Attachments
Patch (3.64 KB, patch)
2022-03-15 07:19 PDT, Kimmo Kinnunen
no flags
Patch (3.48 KB, patch)
2022-03-15 12:03 PDT, Kimmo Kinnunen
no flags
Kimmo Kinnunen
Comment 1 2022-03-15 07:03:09 PDT
Kimmo Kinnunen
Comment 2 2022-03-15 07:19:10 PDT
Myles C. Maxfield
Comment 3 2022-03-15 09:34:09 PDT
Comment on attachment 454704 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=454704&action=review > Source/WebKit/WebProcess/GPU/graphics/RemoteGraphicsContextGLProxy.cpp:142 > + buffer.context().clearRect({ IntPoint(), buffer.backendSize() }); I’m a little confused. If the context is lost, how can you use the context to clearRect()?
Kimmo Kinnunen
Comment 4 2022-03-15 12:03:08 PDT
Kimmo Kinnunen
Comment 5 2022-03-15 12:08:23 PDT
(In reply to Myles C. Maxfield from comment #3) > > > Source/WebKit/WebProcess/GPU/graphics/RemoteGraphicsContextGLProxy.cpp:142 > > + buffer.context().clearRect({ IntPoint(), buffer.backendSize() }); > > I’m a little confused. If the context is lost, how can you use the context > to clearRect()? It's different context (graphics context of the image buffer, vs graphicscontextgl of webgl) However, that's a good point -- if the context is lost, the GPU Process is unreliable and will be shut down, so the image buffer drawing does not make sense either. I'll remove this for now.
EWS
Comment 6 2022-03-15 14:31:15 PDT
Committed r291314 (248453@main): <https://commits.webkit.org/248453@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 454739 [details].
Note You need to log in before you can comment on or make changes to this bug.